tests/expectations/compiler/structs/unknown_member_type_fail.out
Error [ETYC0372017]: The type `test.aleo::Bar` is not found in the current scope.
    --> compiler-test:3:5
     |
   3 |     bar: Bar,
     |     ^^^^^^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo::credits` instead of `credits`
